--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["@babel/env", "@babel/react"]
+  "presets": ["@babel/preset-env", "@babel/react"],
+  "plugins": ["transform-class-properties"]
 }
