set up typescript and migrate first files to tsx

--- a/package.json
+++ b/package.json
@@ -17,21 +17,20 @@
   "author": "Ed Watts",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "@types/react": "^16.4.13",
+    "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.5.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
+    "typescript": "^3.0.3",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6"
   },
   "dependencies": {
+    "@types/react-dom": "^16.0.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-mock": "^6.0.1",
