--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/react-dom": "^16.0.7",
+    "@types/react-router": "^4.0.30",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-mock": "^6.0.1",
