--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^16.4.13",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
